fix overflow issues

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -182,8 +182,9 @@ code {
 }
 
 pre {
-  width: fit-content;
   min-width: 50vw;
+  max-width: 100vw;
+  overflow: hidden;
   padding: 1rem;
   border-radius: 4px;
 }
@@ -191,6 +192,7 @@ pre {
 pre code {
   background-color: transparent;
   box-shadow: none;
+  overflow: scroll;
 }
 
 blockquote {
